2010-07-01  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/OpenFileDialogTest.cs: Darn, put the
	  moonlight bug on the right test.

2010-07-01  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/MediaElementTest.cs:
	* System.Windows.Controls/ItemContainerGeneratorTest.cs:
	  Updated to SL4 compatibility.

2010-07-01  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/OpenFileDialogTest.cs: Whoops!

2010-07-01  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/OpenFileDialogTest.cs: Update the
	  OpenFileDialog tests.

2010-07-01  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/SaveFileDialogTest.cs: Update the
	  SaveFileDialog tests

2010-07-01  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/StackPanelTest.cs: Update stackpanel
	  tests to SL4.

2010-07-01  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/TextBlockTest.cs: Update the
	  TextBlock tests to SL4 compatibility.

2010-07-01  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/ControlTest.cs: Added validators to
	  Control.FontSize and Control.FontFamily. All Control tests
	  now pass under SL4.

2010-07-01  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/ControlTemplateTest.cs: Add the
	  missing MoonlightBug

2010-07-01  Alan McGovern  <amcgovern@novell.com>

	* misc/DefaultValues.cs:
	* System.Windows.Controls/ControlTemplateTest.cs: Update the
	  ControlTemplate tests for SL4 compatibility.

2010-07-01  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/ContentControlTest.cs: Update the
	  ContentControl tests to SL4 compatibility.

	* System.Windows/FrameworkElementTest.cs: These tests all pass
	  now.

	* System.Windows.Controls/ContentPresenterTest.cs: Update the
	  ContentPresenterTests to SL4 compatibility.

2010-06-30  Sebastien Pouliot  <sebastien@ximian.com>

	* System.Windows.Interop/SilverlightHostTest.cs: Add test case