@@ -1,3 +1,12 @@
+2010-07-02  Alan McGovern  <amcgovern@novell.com>
+
+	* System.Windows.Controls.Primitives/PopupTest.cs: Update the
+	  popup tests to SL4. They proved hard to fix without
+	  regressing other tests.
+
+	* System.Windows.Controls/ContentPresenterTest.cs: Add an
+	  extra assert to
+
 2010-07-01  Alan McGovern  <amcgovern@novell.com>
 
 	* System.Windows.Controls/OpenFileDialogTest.cs: Darn, put the
